<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3C3C3"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".UI.UserData">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:fadingEdge="vertical"
        android:padding="5dp"
        android:requiresFadingEdge="horizontal"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/user_dummy_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="serif"
            android:text="@string/name"
            android:textColor="#0099ff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="serif"
            android:text="@string/account_no"
            android:textColor="#0099ff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/account_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="serif"
            android:text="@string/email"
            android:textColor="#0099ff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="serif"
            android:text="@string/ifsc_code"
            android:textColor="#0099ff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ifsc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="serif"
            android:text="@string/mobile_no"
            android:textColor="#0099ff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="serif"
            android:text="@string/current_balance"
            android:textColor="#0099ff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avail_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/transfer_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="#0099ff"
        android:fontFamily="@font/averia_serif_libre_light"
        android:padding="5dp"
        android:text="@string/transfer_money"
        android:textStyle="bold" />

</LinearLayout>